fix font size too small

--- a/src/home/components/Hero.css
+++ b/src/home/components/Hero.css
@@ -40,8 +40,7 @@
   left: -88%;
   top: 90%;
   color: var(--primary-color);
-  /* font-size: 0.2rem; */
-  font-size: 0.2rem;
+  font-size: 8px;
   letter-spacing: -0.05rem;
   font-weight: 700;
   border-top: 2px dashed var(--primary-color);
